--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -22,6 +23,7 @@
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "razorpay": "^0.0.0"
   }
 }
