--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport-google-oauth": "^2.0.0",
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.4",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
